// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`context-files end-to-end 1`] = `
[
  {
    "content": [
      {
        "text": "These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.",
        "type": "text",
      },
      {
        "text": "File \`poem.txt\`",
        "type": "text",
      },
      {
        "text": "Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.
",
        "type": "text",
      },
      {
        "text": "check out this file",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
]
`;

exports[`context-files multiple, weird path names 1`] = `
[
  {
    "content": [
      {
        "text": "These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.",
        "type": "text",
      },
      {
        "text": "File \`poem.txt\`",
        "type": "text",
      },
      {
        "text": "Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.
",
        "type": "text",
      },
      {
        "text": "File \`poem 3.txt\`",
        "type": "text",
      },
      {
        "text": "poem3
",
        "type": "text",
      },
      {
        "text": "check out this file",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
]
`;

exports[`includes PDF file in context and sends summary in context updates 1`] = `
[
  {
    "content": [
      {
        "text": "These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.",
        "type": "text",
      },
      {
        "text": "PDF Document: context-test.pdf
Pages: 3

Use get-file tool with a pdfPage parameter to access specific pages.",
        "type": "text",
      },
      {
        "text": "read the first page of this file",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
]
`;

exports[`sends update if the file was edited pre-insert 1`] = `
{
  "content": [
    {
      "text": "These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.",
      "type": "text",
    },
    {
      "text": "- \`poem.txt\`
\`\`\`diff
Index: poem.txt
===================================================================
--- poem.txt	previous
+++ poem.txt	current
@@ -1,3 +1,3 @@
-Moonlight whispers through the trees,
+changed first line
 Silver shadows dance with ease.
 Stars above like diamonds bright,

\`\`\`",
      "type": "text",
    },
  ],
  "role": "user",
}
`;
